fix(projectheadings): make them the right weight on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@ dialog.open {
 .work-example-heading {
   font-family: "Crimson Pro", serif;
   font-size: var(--20px);
+  font-weight: 400;
   margin-block: 0;
   margin-block-end: 6px;
 }
